css/common-forms.less
// =============================================================================================
// FORMS

// Buttons
.button,
.widget.feature .feature-bgimg .content button,
.contactform button.btn,
.widget.button button,
.widget .btn,
.widget.profile form button,
.widget.paypalbuynow .widget.button.paypal,
.widget.tweet a,
.widget.dropbox button,
.signupform fieldset button,
.blog-search-submit-button,
.widget.ecomproduct .ecom-product .btn,
.widget.ecomcheckout .checkout-order-button,
.widget.ecombasket .ecombasket-list-container .ecombasket-summart-wrap .ecombasket-summary-link,
.blog-post-more-link a,
.blog-list-footer .paginate-older,
.widget.clicktocall a,
.advancedcontactform button
 {
	padding: 0 10px;
	display: inline-block;
	cursor: pointer;
	font-family: @font-swatch7-font-family;
	font-weight: @font-swatch7-font-weight;
	background-color: @font-swatch7-background-color;
	color: @font-swatch7-color;
	font-size: @font-swatch7-font-size;
	border: none;
	margin: 0;
	-webkit-user-select: none;  /* Chrome all / Safari all */
	-moz-user-select: none;     /* Firefox all */
	-ms-user-select: none;      /* IE 10+ */
	line-height: (@font-swatch7-font-size * 2.5);
	-webkit-transition: all 0.1s linear;
	-moz-transition: all 0.1s linear;
	-o-transition: all 0.1s linear;
	transition: all 0.1s linear;

	@media only screen and (max-width : 460px) {
		padding: 0 1.2em;
		font-size: bkscale(@font-swatch7-font-size, 0.75);
		line-height: (@font-swatch7-font-size * 2);
	}

	&:hover {
		background-color: darken(@font-swatch7-background-color, 10%);
		text-decoration: none;
	}
}

// Image buttons
.widget.paypalbuynow .widget.button.paypal,
.widget.tweet a,
.widget.dropbox button,
.widget.clicktocall a {
	padding-left: 40px;
	background-position: 10px center;
	&:hover {
		padding-left: 40px;
		background-position: 10px center;
	}
}




// Text Inputs
.contactform input, .contactform textarea,
.widget.profile form fieldset input.email,
.signupform fieldset input.email,
.blogsearch input.blog-search-input,
.widget input[type="text"],
.widget input[type="email"],
.productlist-filter .productlist-search input,
.signupform fieldset input,
.advancedcontactform input,
.advancedcontactform textarea {
	background-color: #ffffff;
	border: 1px solid darken(@color-swatch1,10%);
	padding: 0 1em;
	margin-right:5px;
	text-indent: 0;

	height: (@font-swatch7-font-size * 2.5 );
	line-height: (@font-swatch7-font-size * 2.5 );

	-webkit-appearance: none;
	border-radius: 0;



	@media only screen and (max-width : 460px) {
		font-size: bkscale(@font-swatch7-font-size, 0.75);
		height: (@font-swatch7-font-size * 2);
		line-height: (@font-swatch7-font-size * 2);
	}




	&:focus {
		border: 1px solid @color-swatch3;

	}
}

.contactform textarea,
.advancedcontactform textarea {
	line-height: bkscale(@font-swatch7-line-height, 0.7);
	min-height: 10em;
	padding-top: 0.5em;
	padding-bottom: 0.5em;
	@media only screen and (max-width : 460px) {
		line-height: bkscale(@font-swatch7-line-height, 0.5);
	}
}

// Labels
.contactform label,
.signupform fieldset label,
.blog-search-form label,
.widget.ecomcheckout .delivery label,
.ecom-product-vartitle,
.advancedcontactform label {
    font-family: @font-swatch4-font-family;
    font-size: @font-swatch4-font-size;
    font-weight: @font-swatch4-font-weight;
    line-height: @font-swatch4-line-height;
    color: @font-swatch4-color;
    letter-spacing: @font-swatch4-letter-spacing;
    @media only screen and (max-width : 460px) {
		line-height: bkscale(@font-swatch4-line-height, 0.8);
		font-size:bkscale(@font-swatch4-font-size, 0.8);
	}
}

// Advanced Contact Form

.advancedcontactform {
	.select-wrap {
		margin: 10px 0 20px;
    	display: inline-block;
	}
	.option-list {
    	margin: 0px 0 10px;
	}
	label {
    	width: 100%;
    	display: block;
	}
	select {
		border: 2px solid #e87750;
    	background-color: #f7f7f7;
    	height: 40px;
	}
}

// Selects
.widget.ecomproductslist .productlist-filter,
.widget.ecomcheckout .delivery,
.widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation {
	& select {
		text-indent: 0.01px;
		text-overflow: '';
		cursor: pointer;
		position: relative;
		background-repeat: no-repeat;
		background-position: right center;
		margin: 0;
		border: 2px solid @color-swatch3;
		background-color: #F7F7F7;
		color: @color-swatch5;


		border-radius: 30px;
		position: relative;
		display: inline-block;
		font-family: @font-swatch7-font-family;
		font-size: @font-swatch7-font-size;
		font-weight: @font-swatch7-font-weight;

		height: (@font-swatch7-font-size * 2.5 );
		line-height: 1;

		webkit-box-sizing: border-box;
		-moz-box-sizing: border-box;
		box-sizing: border-box;

		-webkit-appearance: none;
		border-radius: 0;

		@media only screen and (max-width : 460px) {
			font-size: bkscale(@font-swatch7-font-size, 0.75);
			height: (@font-swatch7-font-size * 2);
		}

		&:hover {
			border-color: @color-swatch2;

		}

		&:focus {
			border-color: @color-swatch2;
		}
	}
}

// Hides *custom* dropdown arrow in Firefox 30 and above
@supports (-moz-appearance:meterbar) and (background-blend-mode:difference,normal) {
	.widget.ecomproductslist .productlist-filter,
	.widget.ecomcheckout .delivery,
	.widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation {
		& select {
			background-image: none;
		}
	}
}


// Placeholders
input::-webkit-input-placeholder {
   color: mix(@color-swatch1, @color-swatch2, 16%);
}

input:-moz-placeholder { /* Firefox 18- */
   color: mix(@color-swatch1, @color-swatch2, 16%);
}

input::-moz-placeholder {  /* Firefox 19+ */
   color: mix(@color-swatch1, @color-swatch2, 16%);
}

input:-ms-input-placeholder {
   color: mix(@color-swatch1, @color-swatch2, 16%);
}

